update user router, move swagger to the same pointer, added cors middleware,
